--- a/Dynatrace.OpenTelemetry.Instrumentation/Dynatrace.OpenTelemetry.Instrumentation.csproj
+++ b/Dynatrace.OpenTelemetry.Instrumentation/Dynatrace.OpenTelemetry.Instrumentation.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="OpenTelemetry" Version="1.1.0" />
   </ItemGroup>
