--- a/Dynatrace.OpenTelemetry.Instrumentation/Dynatrace.OpenTelemetry.Instrumentation.csproj
+++ b/Dynatrace.OpenTelemetry.Instrumentation/Dynatrace.OpenTelemetry.Instrumentation.csproj
@@ -1,11 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
     <PackageReference Include="OpenTelemetry" Version="1.1.0" />
   </ItemGroup>
