--- a/Dynatrace.OpenTelemetry.Instrumentation/Dynatrace.OpenTelemetry.Instrumentation.csproj
+++ b/Dynatrace.OpenTelemetry.Instrumentation/Dynatrace.OpenTelemetry.Instrumentation.csproj
@@ -9,7 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.1.1" />
-    <PackageReference Include="OpenTelemetry" Version="1.1.0" />
+    <PackageReference Include="OpenTelemetry" Version="1.2.0-beta1" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.2.0-beta1" />
   </ItemGroup>
 
 </Project>
