--- a/AzFuncOpenTelemetryDemo/AzFuncQueueDemo.csproj
+++ b/AzFuncOpenTelemetryDemo/AzFuncQueueDemo.csproj
@@ -13,10 +13,8 @@
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.13" />
-    <PackageReference Include="OpenTelemetry" Version="1.1.0" />
-    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.1.0" />
-    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.1.0" />
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc7" />
+    <PackageReference Include="OpenTelemetry" Version="1.2.0-beta1" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc8" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dynatrace.OpenTelemetry.Instrumentation\Dynatrace.OpenTelemetry.Instrumentation.csproj" />
