Refactor Dynatrace.OpenTelemetry project out of Dynatrace.OpenTelemetry.Instrumntation framework

--- a/AzFuncOpenTelemetryDemo/AzFuncQueueDemo.csproj
+++ b/AzFuncOpenTelemetryDemo/AzFuncQueueDemo.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dynatrace.OpenTelemetry.Instrumentation\Dynatrace.OpenTelemetry.Instrumentation.csproj" />
+    <ProjectReference Include="..\Dynatrace.OpenTelemetry\Dynatrace.OpenTelemetry\Dynatrace.OpenTelemetry.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
